# SplatCore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  main.cpp  sha256_log.txt  sha256_rootcause.md
.github/workflows/: build_check.yml  vram_poison_ci.yml
docs/: V05_MEMORY_LIFECYCLE_CONSTITUTION.md  V06_VRAM_POISON_TEST_DESIGN.md  V07_SHA256_DETERMINISM_ANALYSIS.md
shaders/: cube.vert  point.frag  point.vert  sha256_compute.comp  sha256_depth_compute.comp  triangle.vert  vram_poison.comp
src/core/memory/: MemorySystem.cpp  MemorySystem.h  VramLogger.cpp  VramLogger.h
src/core/transform/: CoordinateFrame.cpp  CoordinateFrame.h  TransformTree.cpp  TransformTree.h
src/tests/: EpsilonProbe.cpp  EpsilonProbe.h  HashProbe.cpp  HashProbe.h  PcieTransferTracker.cpp  PcieTransferTracker.h  PoisonTestHarness.cpp  PoisonTestHarness.h
tests/assets/: poison_test_scene.ply
tests/epsilon/: test_epsilon_invariance.cpp
tests/memory/: test_vram_lifecycle.cpp
tests/pcie/: test_pcie_baseline.cpp
tests/poison/: test_vram_poison.cpp
tests/sha256/: test_sha256_consistency.cpp
tests/transform/: test_transform_tree.cpp
